src/objects/Exception__c.object
<CustomObject>
    <description>Custom exception object to store exceptions/errprs</description>
    <fields>
        <fullName>Cause__c</fullName>
        <label>Cause</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fields__c</fullName>
        <description>For use with database class</description>
        <label>Fields</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Further_Details__c</fullName>
        <description>Optional/extra details that can be sent via specific code calling exception handler</description>
        <label>Further Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Record__c</fullName>
        <label>Related Record</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Exception</label>
    <listViews>
        <fullName>PII_Exceptions_Nov</fullName>
        <columns>NAME</columns>
        <columns>Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>PII Site Guest User</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>11/1/2017 12:00 AM</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>11/13/2017 12:00 AM</value>
        </filters>
        <label>PII Exceptions Nov</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Ex-{000000}</displayFormat>
        <label>Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>